# Swordfish

./: .gitignore  Cargo.toml  README.md  TODO.md  outputD1.txt  outputD2.txt  stockfishOutput.txt  stockfishOutputD2.txt
chess-gui/: Cargo.toml  index.html
chess-gui/src/: lib.rs
src/: bitboard.rs  enginemanager.rs  gamemanager.rs  gamemaster.rs  hashing.rs  main.rs  movetable.rs  types.rs  ucimanager.rs
src/gamemanager/: evaluation.rs  legal_moves.rs  mod.rs
src/gamemanager/evaluation/: heatmaps.rs  mod.rs
src/gamemanager/legal_moves/: black.rs  mod.rs  perft.rs  search.rs  white.rs
src/gamemanager/pseudolegal_moves/: bishops.rs  kings.rs  knights.rs  mod.rs  pawns.rs  queens.rs  rooks.rs
src/movetable/: mod.rs  noarc.rs
src/types/: mod.rs
src/ucimanager/: mod.rs
