[package]
version = "0.1.0"
name = "chess-gui"
repository = "https://github.com/seed-rs/seed-quickstart"
authors = ["Eric Oliver <erico49867@gmail.com>"]
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.8.0"
swordfish = { path = ".." }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }


[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
